--- a/MÓDULO 3/DESAFIOS/DESAFIOCORDEL/estilo/style.css
+++ b/MÓDULO 3/DESAFIOS/DESAFIOCORDEL/estilo/style.css
@@ -4,10 +4,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+
 :root {
     --fonte1: Verdana, Geneva, Tahoma, Sans-serif;
     --fonte2: "Passion One", sans-serif;
     --fonte3: "Sriracha", cursive;
+    --fonte4: "Handlee", cursive;
 }
 
 * {
@@ -23,7 +26,7 @@ html, body {
 }
 
 header {
-    background-color: black;
+    background-color: rgba(55, 37, 1, 0.668);
     color: white;
     text-align: center;
 }
@@ -32,7 +35,7 @@ header > h1 {
     padding-top: 50px;
     /*text-transform: uppercase; OU*/
     font-variant: small-caps;
-    font-family: var(--fonte2);
+    font-family: var(--fonte4);
     font-size: 10vw;
 }
 
@@ -56,29 +59,47 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
+    font-size: 3.0vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
-    background-color: white;
+    background-color: rgb(243, 237, 217);
     color: black;
 }
 
 section.imagem {
-    background-color: rgb(33, 33, 33);
+    background-color: rgba(53, 45, 29, 0.668);
     color: white;
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.469);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.516);
+    background-color: rgba(53, 45, 29, 0.428);
+    text-shadow: 1px 1px 0px black;
+}
 
+section#img01 {
+    background-image: url('../imagens/familia1.jpg');
+    background-position: center center;
+}
+
+section#img02 {
+    background-image: url('../imagens/familia2.jpg');
+    background-position: center center;
 }
 
 footer {
-    background-color: black;
+    background-color: rgba(55, 37, 1, 0.668);
     text-align: center;
     color: white;
     padding: 10px;
+    
 }
